icon spacing; bug fix for navbar-brand

--- a/client/stylesheets/_style.less
+++ b/client/stylesheets/_style.less
@@ -50,6 +50,7 @@ input:not([type="checkbox"]):not([type="radio"]).inverse, textarea.inverse {
 
 .glyphicon {
   top: 2px;
+  padding-right: 3px;
 }
 
 .header-background {
